syntax = "proto3";

package event;

service Event {
  rpc MakeEvent(MakeEventRequest) returns (MakeEventResponce);
  rpc GetEvent(GetEventRequest) returns (GetEventResponce);
  rpc DeleteEvent(GetEventRequest) returns (DeleteEventResponce);
  rpc GetEvents(GetEventsRequest) returns (stream GetEventsResponce);
}

message MakeEventRequest {
int64 senderID = 1;
int64 time= 2;
string name =3;
}

message MakeEventResponse {
int64 eventID= 1;
}

message GetEventRequest {
int64 senderID = 1;
int64 eventID = 2;
}

message GetEventResponse {
int64 senderID = 1;
int64 eventID = 2;
int64 time;
string name;
}

message DeleteEventResponse {
string deleteresponse = 1;
}

message GetEventsRequest {
int64 senderID = 1;
int64 fromtime = 2;
int64 totime = 3;
}

message GetEventsResponse {
int64 senderID = 1;
int64 time = 2;   
repeated events = 3;
}
